added some new projects

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,6 +22,9 @@ book:
     - commutators.qmd
     - groebner1.qmd
     - genord.qmd
+    - cubo.qmd
+    - grafos.qmd
+    - algebras.qmd
 
 format:
   html:
