--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,7 @@ book:
     - list_mat_perm.qmd
     - estrut.qmd
     - ling.qmd
+    - erdos_woods.qmd
     - collatz.qmd
     - aliquot.qmd
     - rsa.qmd
